Haciendo funcional el descargar

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@ footer{
 </head>
 
 <body>
+  <a href="archivo.pdf" download="archivo.pdf">
+                    <button style="padding: 10px 16px; background: #FAFDD6; color: #2c2c2c; border: none; border-radius: 6px; cursor: pointer; font-weight: bold; margin-left: 20px;">
+                        Descargar
+                    </button>
+                </a>
+            </div>
+        </div>
+    </header>
 <header>
   <div class="container header-content">
     <div style="display:flex;align-items:center;gap:10px;">
