--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ footer{
 
 <footer id="contacto">
   <div class="container">
-    <p>&copy; 2025 TechBlog. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Paginita de Jesus. Todos los derechos reservados.</p>
   </div>
 </footer>
 
