--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ footer{
         <li><a href="#diseño">Diseño</a></li>
         <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
         <li><a href="#contacto">Contacto</a></li>
-        <li><a href="#descargar">Descargar</a></li>
+        <li><a href="PDF de la paginita.pdf" download> <button> Descargar PDF </button> </a>/li>
       </ul>
     </nav>
   </div>
