--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ footer{
 <header>
   <div class="container header-content">
     <div style="display:flex;align-items:center;gap:10px;">
-      <img src="IMG/Producto.png" alt="Logo de TechBlog">
+      <img src="IMG/Graduadito.jpg" alt="Logo de TechBlog">
       <h1>Paginita</h1>
     </div>
     <div class="menu-toggle">☰ Menú</div>
